--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: darkseagreen;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 h1 {
     text-align: center;
