--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: darkseagreen;
+    background-color: salmon;
     font-family: 'Times New Roman', Times, serif;
 }
 h1 {
