--- a/styles.css
+++ b/styles.css
@@ -16,5 +16,5 @@ width: 20%;
 margin: 10px;
 padding: 20px 10px;
 background: rgb(41, 152, 255); /*pick a color */
-border-radius: 25%;
+border-radius: 25;
 }
